--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,13 @@
 {
-    "name": "jordikroon/google-vision",
+    "name": "kontrimas/google-vision",
     "description": "Google Vision Api for PHP (https://cloud.google.com/vision/)",
     "keywords": ["Google","Cloud", "Vision", "Api", "Image", "Face", "Recognition", "Landmark"],
     "license": "MIT",
     "type": "library",
     "authors": [
         {
-            "name": "Jordi Kroon",
-            "email": "jordi@jordikroon.nl"
+            "name": "Antanas Kontrimas",
+            "email": "triukai@gmail.com"
         }
     ],
     "require": {
